Details
Description
Seems there are uninitialized scrollbars when first opening explorer.
Navigating into c: 'fixes' it.
msvc build.
Log when opening explorer (shortcut on desktop, 'My Computer'):
err:(dll\win32\shell32\CDefaultContextMenu.cpp:389) IShellExtInit::Initialize failed.clsid {2690b74f-f353-422d-bb12-401581eef8f1} hr 0x80004005
|
(dll\win32\kernel32\client\loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
|
fixme:(dll\win32\comctl32\toolbar.c:394) [0004014A] TBSTYLE_REGISTERDROP not implemented
|
fixme:(dll\win32\comctl32\toolbar.c:394) [00040148] TBSTYLE_REGISTERDROP not implemented
|
fixme:(dll\win32\comctl32\toolbar.c:5508) hwnd=00040148 wParam 00000001 lParam 00000000
|
fixme:(dll\win32\shlwapi\url.c:2532) stub
|
(R:\src\dev\win32ss\user\ntuser\winpos.c:3325) err: NtUserSetWindowPos bad window handle!
|
fixme:(dll\win32\comctl32\toolbar.c:5623) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_PREERASE)
|
fixme:(dll\win32\comctl32\toolbar.c:5660) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_POSTERASE)
|
fixme:(dll\win32\comctl32\toolbar.c:5623) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_PREERASE)
|
fixme:(dll\win32\comctl32\toolbar.c:5660) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_POSTERASE)
|
(R:\src\dev\win32ss\user\ntuser\winpos.c:3325) err: NtUserSetWindowPos bad window handle!
|
(R:\src\dev\win32ss\user\ntuser\winpos.c:3325) err: NtUserSetWindowPos bad window handle!
|
fixme:(dll\win32\comctl32\toolbar.c:5623) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_PREERASE)
|
fixme:(dll\win32\comctl32\toolbar.c:5660) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_POSTERASE)
|
WARNING: NtUserLockWindowUpdate at R:\src\dev\win32ss\user\ntuser\ntstubs.c:921 is UNIMPLEMENTED!
|
fixme:(dll\win32\comctl32\toolbar.c:5623) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_PREERASE)
|
fixme:(dll\win32\comctl32\toolbar.c:5660) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_POSTERASE)
|
|
Log when navigating to c:
fixme:(dll\win32\comctl32\toolbar.c:5623) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_PREERASE)
|
fixme:(dll\win32\comctl32\toolbar.c:5660) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_POSTERASE)
|
fixme:(dll\win32\comctl32\toolbar.c:5623) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_PREERASE)
|
fixme:(dll\win32\comctl32\toolbar.c:5660) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_POSTERASE)
|
err:(dll\win32\shell32\CDefaultContextMenu.cpp:389) IShellExtInit::Initialize failed.clsid {2690b74f-f353-422d-bb12-401581eef8f1} hr 0x80004005
|
WARNING: NtUserLockWindowUpdate at R:\src\dev\win32ss\user\ntuser\ntstubs.c:921 is UNIMPLEMENTED!
|
fixme:(dll\win32\comctl32\toolbar.c:5623) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_PREERASE)
|
fixme:(dll\win32\comctl32\toolbar.c:5660) [0004014A] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_POSTERASE)
|
Attachments
Issue Links
- is duplicated by
-
CORE-15875 [UI] explorer draws scrollbars on window when opened
-
- Resolved
-
- relates to
-
CORE-10617 ListView corrupt scrollbar upon resizing the column-header
-
- Resolved
-
-
CORE-15758 Uninstaller of MS .NET 4.0 draws an unintended vertical scrollbar that partly disappears upon mouse scrollwheel scrolling
-
- Resolved
-
-
CORE-15911 Scrollbars do not disappear when Maximizing and not needed
-
- Resolved
-
-
CORE-16466 Explorer Scroll Bars Flash on for Fraction of Second & Disappear on First Open
-
- Resolved
-