[0.4.11] [BROWSEUI] Workaround regression CORE-15429 'unintended scrollbars'

Thanks to Doug Lyons for providing a temporary workaround quickly.